[package]
name = "rum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.2"
num-traits = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false 
overflow-checks = false
debug = false
release = true
